fixed drawToggle & drawContent being hidden behind parent element after animation played

--- a/src/components/Project/Project.module.css
+++ b/src/components/Project/Project.module.css
@@ -1,3 +1,7 @@
+.Project {
+  display: flex;
+}
+
 .IconsBar {
   border-radius: 10px 10px 0px 0px;
   height: auto;
@@ -25,7 +29,6 @@
 }
 
 .ProjectDesc {
-  opacity: 90%;
   border-radius: 0px 0px 10px 10px;
   background-color: #f9f4ee;
   border: 1px 0px 0px 1px solid rgb(0, 0, 0);
