--- a/src/containers/Contact/Contact.module.css
+++ b/src/containers/Contact/Contact.module.css
@@ -13,11 +13,9 @@
 }
 
 .ContactForm {
-  opacity: 90%;
   background-color: #b1afae;
   height: auto;
   margin: 0px 15px 15px 15px;
-  opacity: 90%;
   height: 100%;
   width: auto;
   padding: 25px;
