--- a/src/containers/Draw/Draw.module.css
+++ b/src/containers/Draw/Draw.module.css
@@ -14,8 +14,6 @@
 }
 
 .DrawToggle {
-  opacity: 90%;
-  box-shadow: 0px 5px 20px rgb(24, 24, 24);
   height: auto;
   margin: 0px 15px 0px 15px;
   background-color: #f9f4ee;
