--- a/src/containers/Draw/DrawContent/DrawContent.module.css
+++ b/src/containers/Draw/DrawContent/DrawContent.module.css
@@ -1,8 +1,6 @@
 .DrawContent {
-  opacity: 90%;
   border-radius: 0px 0px 10px 10px;
   background-color: #f9f4ee;
-  border: 1px 0px 0px 1px solid rgb(0, 0, 0);
   box-shadow: 0 5px 10px rgb(0, 0, 0);
   margin: 0px 15px 20px 15px;
   padding: 5px;
