--- a/src/containers/FadeInSection/FadeInSection.module.css
+++ b/src/containers/FadeInSection/FadeInSection.module.css
@@ -1,28 +1,11 @@
-.FadeFromRight {
+.FadeInSection {
   opacity: 0;
-  transform: translateX(-20vh);
+  transform: translateY(20vh);
   visibility: hidden;
-  transition: opacity 0.6s ease-out, transform 1s ease-out;
+  transition: opacity 0.6s ease-out, transform 1.2s ease-out;
   will-change: opacity, visibility;
 }
-.FadeFromLeft {
-  opacity: 0;
-  transform: translateX(20vh);
-  visibility: hidden;
-  transition: opacity 0.6s ease-out, transform 1s ease-out;
-  will-change: opacity, visibility;
-}
-
-.FadeFromTop {
-  text-align: center;
-  opacity: 0;
-  transform: translateY(-5vh);
-  visibility: hidden;
-  transition: opacity 0.9s ease-out, transform 1s ease-out;
-  will-change: opacity, visibility;
-}
-
-.IsVisible {
+.FadeInSection.isVisible {
   opacity: 1;
   transform: none;
   visibility: visible;
